# claude-eyes

./: .env.example  .gitignore  LICENSE  MCP_SETUP.md  README.md  pyproject.toml  requirements.txt  start.py
app/: __init__.py
app/agents/: __init__.py  claude_adapter.py  gemini_adapter.py  gemini_keys.py  narrate.py  openai_adapter.py
app/api/: __init__.py  server.py  studio.py  websocket.py
app/api/static/: studio.html
app/browser/: __init__.py  browser_manager.py  discovery_engine.py  humanize.py  intelligence.py  media.py  ocr.py  page_memory.py  playwright_controller.py  profiles.py  screenshot_manager.py  session_pool.py  session_recorder.py  stealth.py  video_recorder.py  visual_diff.py  website_skills.py
app/mcp/: __init__.py  mcp_server.py
app/models/: __init__.py  commands.py  responses.py
app/utils/: __init__.py  config.py  error_handler.py  helpers.py  logger.py
tests/: conftest.py  test_api.py  test_browser.py  test_features_browser.py  test_gemini_adapter.py  test_helpers.py  test_humanize.py  test_intelligence.py  test_media.py  test_models.py  test_narrate.py  test_ocr.py  test_page_memory.py  test_profiles.py  test_session_pool.py  test_session_recorder.py  test_url_matching.py  test_visual_diff.py  test_website_skills.py
